# Alance

./: .setup.cfg  Algorithms.py  Analyzer.py  Cli.py  Dockerfile.dockerfile  Executor.py  LICENSE  MANIFEST.in  README.md  README.txt  Requirements.txt  Visualize.py  __init__  analyzer.py  init.py  main.py  pyproject.toml  quantum.py  requiremets.txt  tests.py
.github/workflows/: ci.yml  publish-pypi.yml
Alance.dev/: Algorithms.py
alance/: autodiff.py  core.py  init.py
alance/autodiff/: init.py
docs/: about.html  alance-sdk.md  api.html  contact.html  contributing.md  docusaurus.config.md  examples. html  examples.html  index.html  intro.html  package.json  roadmap  script.js  sdk.html  search.js  style.css
docs/css/: style.css
docs/js/: main.js
examples/: basic_usage.py  bell.py  grover.py
tests/: qft.py  test_alance.py  test_basic.py  test_bell.py  test_grover.py  test_teleport.py
website/: docusaurus.config.js  sidebars.js  src.pages.index.js
website/docs/: api-reference.md  examples.md  getting-started.md  intro.md  release-notes.md
website/docs/examples/: bell_state.py
website/srs/css/: custom.css
