[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alance"
version = "0.1.0"
description = "NumPy + Autodiff + Quantum simulator."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Pascal Rapulana" }]
dependencies = ["numpy>=1.20"]

[tool.setuptools]
packages = ["alance"]
